# auto-rb-recorder

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  auto-rb-recorder.spec  config.default.toml  entitlements.plist  poc.md  pyproject.toml  research-findings.md  spec.md
.beads/: .beads-credential-key  metadata.json
.github/workflows/: preview.yml  release.yml  test.yml
docs/: architecture-options.md  architecture-problems.md  fart-bug.md  requirements.md  research.md  session-2026-03-28.md  use-cases.md  windows-support-design.md
docs/plans/: 2026-03-22-rekordbox-auto-recorder.md
install/: com.rb-recorder.plist
mac-capture/: Info.plist  Package.swift  test_audio.swift  test_crash.swift  test_crash_minimal.swift  test_list.swift  test_sck_init.swift  test_stream.swift
scripts/: bench_recording.py  build-windows.ps1  build.sh  diagnose_audio.py  diagnose_audio2.py  diagnose_audio3.py  install-debug.sh  install-windows.ps1  install.sh  integration_test.sh  poc_capture.py  uninstall-windows.ps1
src/: __main__.py  app_state.py  capture.py  config.py  daemon.py  daemon_bridge.py  events.py  login_item.py  menu_bar.py  platform.py  process_monitor.py  rb-recorder.sh  recorder_core.py  splitter.py
src/backends/: README.md  __init__.py  base.py  macos_capture.py  windows_capture.py
src/ui/: preferences_window.py
tests/: test_capture.py  test_capture_integration.py  test_config.py  test_daemon.py  test_platform.py  test_process_monitor.py  test_recorder_core.py  test_splitter.py
windows-capture/: build.ps1  main.cpp
(+3 files in other folders)
