[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "auto-rb-recorder"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["psutil>=7,<8"]

[project.scripts]
auto-rb-recorder = "src.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]
